# geant4-template

./: CMakeLists.txt  README.md  main.cc
include/: ActionInitialization.hh  DetectorConstruction.hh  Materials.hh  PrimaryGeneratorAction.hh
src/: ActionInitialization.cc  DetectorConstruction.cc  Materials.cc  PrimaryGeneratorAction.cc
